# VEIL_MVP

./: .env.example  .gitignore  DESIGN.md  README.md  README_REPO.md  debug_tamper.py  docker-compose.yaml  failure_debug.txt  full_hash.txt  image_hash.txt  metadata.json  pyproject.toml  request_body.json  test_result.txt  veil.ledger.debug.jsonl  veil.ledger.jsonl  veil.ledger.jsonl.bak  veil.ledger.tampered.jsonl
core/mitm/: proxy.py
core/policies/: main.rego
core/reflex/: config.py  main.py
docs/: AGENTS.md  Master_Architecture_v2.1.md  VEIL_LOOP.md  about.md  architecture_python_migration.md  blueprint.md  plan.md  prd.json  todo.md
frontend/: App.tsx  AppRouter.tsx  DASHBOARD_FEATURES.md  constants.ts  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  router.tsx  styles.css  tailwind.config.js  types.ts  vite.config.ts
frontend/components/: AINeuralInsight.tsx  ActionConsole.tsx  AgentRegistration.tsx  AuditLog.tsx  CheckpointFlow.tsx  DashboardPage.tsx  ForgotPasswordPage.tsx  GridBackground.tsx  InteractiveCore.tsx  InteractiveLogo.tsx  LandingPageRedesign.tsx  LogicPipeline.tsx  LoginPage.tsx  LogoShowcase.tsx  NeuralNetworkBackground.tsx  NotFoundPage.tsx  PlaceholderPage.tsx  PolicyEditor.tsx  RouteErrorBoundary.tsx  SettingsPage.tsx  SkillConstellation.tsx  SpaceBackground.tsx  SystemCore.tsx  TelemetryOverlay.tsx  TrustGauge.tsx  VeilIdentityCard.tsx
infra/: envoy.yaml
scripts/: check_resolution.ps1  quick_fix.ps1  start_app.ps1  verify_ledger.py
veil_reflex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+103 files in other folders)
