[project]
name = "veil-reflex"
version = "0.1.0"
description = "VEIL Reflex Engine (Layer 5) & Proxy Interceptor (Layer 0)"
authors = [
    {name = "Veil Team", email = "dev@veil.security"},
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "docker>=6.1.0",
    # "mitmproxy>=10.0.0", # Provided by L0 container image, not needed for L5
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiohttp>=3.9.0",
    "google-generativeai>=0.3.0",
    "redis>=5.0.0",
    "arq>=0.25.0",
    "cryptography>=41.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
